--- a/editor.html
+++ b/editor.html
@@ -40,7 +40,7 @@
 				<h2>How to use the editor and formatter?</h2>
 				<p class="lead">
 					😲 First of it beginning stage alpha editor, it's have lot of buggy, So use carefully!...<br>
-					😕 Before your start edit, copy text any where in your system then past the notepad, After copy text from notepad then past in this editor. Otherwise it make trouble.<br>
+					😕 Before your start edit, copy text any where in your system then paste the notepad, After copy text from notepad then paste in this editor. Otherwise it make trouble.<br>
 					🥶 You can prepare content for Whatsapp messaging with different formatting style
 					options like <b>bold</b>, <i>italic</i>, <strike>strike through</strike> or <b><i><strike>mixed format</strike></i></b>.
 					<br>
